assets/css/general.scss
/* ... */
.ui-tpicker-grid-label {
    background: none;
    border: none;
    margin: 0;
    padding: 0;
}

// RTL timepicker
.ui-timepicker-rtl {
    direction: rtl;

    dl {
        text-align: right;
        padding: 0 5px 0 0;

        dt {
            float: right;
            clear: right;
        }

        dd {
            margin: 0 40% 10px 10px;
        }
    }
}

/* LOADING SPINNER
   ------------------------------------------------------------------------- */

.is-loading {
    position: relative;

    &:before,
    &:after {
        content: '';
        position: absolute;
        top: 50%;
        left: 50%;
    }
}

.animation:after {
    width: 60px;
    height: 60px;
    margin: -25px 0 0 -25px;
    border: 5px solid rgba(var(--bs-body-color-rgb), 0.4);
    border-radius: 50px;
    border-bottom-color: transparent;
    animation: spin 1s infinite linear;
}

@keyframes spin {
    from { transform: rotate(0deg); }
    to { transform: rotate(360deg); }
}

@keyframes spin-reverse {
    from { transform: rotate(0deg); }
    to { transform: rotate(-360deg); }
}

.any-element {
    width: 60px;
    height: 60px;
    position: fixed;
    left: 50vw;
    top: 50vh;
    margin-left: -30px;
    margin-bottom: -30px;
}

/* MESSAGE BOX
   ------------------------------------------------------------------------- */

#message-box pre,
#message-box .card {
    max-height: 250px;
    max-width: 500px;
}

/* FORM VALIDATION
   ------------------------------------------------------------------------- */

.has-error {
    .control-label,
    label {
        color: var(--bs-danger);
    }

    .form-control,
    .form-select {
        border-color: var(--bs-danger);
    }
}

/* FLATPICKR CALENDAR
   ------------------------------------------------------------------------- */

.flatpickr-wrapper {
    width: 100%;
}

.flatpickr-calendar {
    box-shadow: none;

    .flatpickr-monthDropdown-months:hover {
        background: rgba(var(--bs-body-color-rgb), 0.05) !important;
    }

    .flatpickr-months {
        padding: 10px 0;
        background: var(--bs-primary);
        border-radius: var(--bs-border-radius) var(--bs-border-radius) 0 0;
    }

    .flatpickr-current-month {
        padding: 3px;
    }

    .flatpickr-innerContainer {
        border-radius: 0 0 var(--bs-border-radius) var(--bs-border-radius);
    }

    .dayContainer {
        padding: 10px 0;
    }

    .flatpickr-months .flatpickr-month,
    .flatpickr-weekdays,
    .flatpickr-current-month .flatpickr-monthDropdown-months,
    span.flatpickr-weekday {
        background: var(--bs-primary);
        color: var(--bs-white);
        -webkit-appearance: none;
    }

    .flatpickr-day {
        &.selected,
        &.startRange,
        &.endRange {
            &,
            &.inRange,
            &.nextMonthDay,
            &.prevMonthDay,
            &:focus,
            &:hover {
                background: var(--bs-primary);
                border-color: var(--bs-primary);
                color: var(--bs-white);
            }
        }

        &.prevMonthDay,
        &.nextMonthDay {
            height: 0;
            width: 0;
            visibility: hidden;
        }
    }
}

/* COOKIE CONSENT
   ------------------------------------------------------------------------- */

.cc-revoke,
.cc-window {
    z-index: 999 !important;
}

